<!-- Dhairya Pal N01576099 -->

<resources>
    <string name="app_name" translatable="false">DhairyaLab10</string>
    <string name="title_dh1airya" translatable="false">Dh1airya</string>
    <string name="title_pa2l" translatable="false">Pa2l</string>
    <string name="title_n013576099" translatable="false">N013576099</string>
    <string name="title_d4p" translatable="false">D4P</string>
    <string name="splash_screen_text2" translatable="false">by Dhairya Pal N01576099 \u00A9</string>
    <string name="download_image">Download Image</string>
    <string name="full_name_studentid" translatable="false">Dhairya Pal N01576099</string>
    <string name="error" translatable="false">"Error: "</string>
    <string name="celsius" translatable="false">Celsius</string>
    <string name="fahrenheit" translatable="false">Fahrenheit</string>
    <string name="student_id" translatable="false">N01576099</string>
    <string name="shared_preferences" translatable="false">shared preferences</string>
    <string name="sharedprefskey_temperature_scale" translatable="false">temperature_scale</string>
    <string name="empty_string" translatable="false" />
    <string name="select_city" translatable="false">Select city</string>
    <string name="OpenWeatherURL_part1" translatable="false">https://api.openweathermap.org/data/2.5/weather?lat=</string>
    <string name="comma" translatable="false">,</string>
    <string name="OpenWeatherURL_part2" translatable="false"><![CDATA[&lon=]]></string>
    <string name="OpenWeatherURL_part3" translatable="false"><![CDATA[&appid=8ef836d081193156bf276a31f6eae6d9]]></string>
    <string name="error_colon" translatable="false">"Error: "</string>
    <string name="city_placeholderString" translatable="false">City: %s</string>
    <string name="main" translatable="false">main</string>
    <string name="temp" translatable="false">temp</string>
    <string name="temperature_placeholderFloat_c" translatable="false">Temperature: %.1f°C</string>
    <string name="temperature_placeholderFloat_f" translatable="false">Temperature: %.1f°F</string>
    <string name="humidity_placeholderInt" translatable="false">Humidity: %d%%</string>
    <string name="humidity" translatable="false">humidity</string>
    <string name="coord" translatable="false">coord</string>
    <string name="lon_placeholderFloat" translatable="false">Lon: %.4f</string>
    <string name="lat_placeholderFloat" translatable="false">Lat: %.4f</string>
    <string name="sys" translatable="false">sys</string>
    <string name="country_placeholderString" translatable="false">Country: %s</string>
    <string name="country" translatable="false">country</string>
    <string name="lon" translatable="false">lon</string>
    <string name="lat" translatable="false">lat</string>
    <string name="weather" translatable="false">weather</string>
    <string name="desc_placeholderString" translatable="false">Desc: %s</string>
    <string name="description" translatable="false">description</string>
    <string name="error_code_colon" translatable="false">"Error code: "</string>
    <string name="newline" translatable="false">\n</string>
    <string name="html_body_part1" translatable="false"><![CDATA[<html><body>]]></string>
    <string name="html_body_part2" translatable="false"><![CDATA[<iframe width=\'100%\' height=\'315\' src=\']]></string>
    <string name="html_body_part3" translatable="false"><![CDATA[\' frameborder=\'0\' allowfullscreen></iframe>]]></string>
    <string name="html_body_part4" translatable="false"><![CDATA[</body></html>]]></string>
    <string name="text_html" translatable="false">text/html</string>
    <string name="utf_8" translatable="false">UTF-8</string>
    <string name="location_allcaps" translatable="false">LOCATION</string>
    <string name="full_name_space" translatable="false">"Dhairya Pal "</string>
    <string name="permission_denied" translatable="false">Permission denied</string>
    <string name="dismiss" translatable="false">DISMISS</string>
    <string name="latitude_f_longitude_f" translatable="false">Latitude: %f, Longitude: %f</string>
    <string name="packagee" translatable="false">package</string>
    <string name="dhairya_pal_location_determined" translatable="false">Dhairya Pal Location Determined</string>
    <string name="my_channel_id" translatable="false">my_channel_id</string>
    <string name="location_updates" translatable="false">Location Updates</string>
    <string name="notifications_for_location_updates" translatable="false">Notifications for location updates</string>
    <string-array name="spinner_items">
        <item>Salamander</item>
        <item>Komodo Dragon</item>
        <item>Pterodactyl</item>
        <item>Mosasaurus</item>
    </string-array>
    <string-array name="spinner_urls">
        <item>https://th.bing.com/th/id/OIP.gJxBw1ag8Sjts3jwA-6hPQHaEK?rs=1&amp;pid=ImgDetMain</item>
        <item>https://th.bing.com/th/id/OIP.tWwVMYghAk-MK3GthH0odAHaE7?w=284&amp;h=189&amp;c=7&amp;r=0&amp;o=5&amp;dpr=1.3&amp;pid=1.7</item>
        <item>https://cdn.mos.cms.futurecdn.net/6vA8wWskCkUgffN9dbQhvh-1200-80.jpg</item>
        <item>https://www.jurassicworlduniverse.com/wordpress/wp-content/uploads/2014/11/mosasaurus3.jpg</item>
    </string-array>
    <string-array name="spinner_cities">
        <item>Select city</item>
        <item>Toronto</item>
        <item>Paris</item>
        <item>Rome</item>
        <item>New Delhi</item>
        <item>Moscow</item>
    </string-array>
    <string-array name="spinner_cities_lat_lon">
        <item></item>
        <item>43.651070,-79.347015</item>
        <item>48.856613,2.352222</item>
        <item>41.902782,12.496366</item>
        <item>28.613939,77.209021</item>
        <item>55.755825,37.617298</item>
    </string-array>
    <string-array name="webview_video_urls">
        <item>https://www.youtube.com/embed/LC8MZ7H5YSU?si=c9PBC-U16DDksAKP</item>
        <item>https://www.youtube.com/embed/W19MuGZ5apU?si=4nuEeS432BEUBSfc</item>
        <item>https://www.youtube.com/embed/3ryh7PNhz3E?si=P5BT5tfLyBcI5F9j</item>
    </string-array>
    <string-array name="webview_videos">
        <item>Chances - The Strokes cover by Nori</item>
        <item>How to hit a high ball in Volleyball</item>
        <item>The best and worst Glute exercises</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dpnd">DPND</string>
    <string name="all_characters_but_numbers"><![CDATA[abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%^&*()_+-=[]{}|;:\',.<>?/\\]]></string>
    <string name="empty_not_allowed">Empty not allowed</string>
    <string name="invalid_input">Invalid input</string>
    <string name="course_name">Course Name</string>
    <string name="course_description">Course Description</string>
    <string name="no_data_to_delete">No data to delete</string>
</resources>