<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_blue"
    tools:context=".ui.Pa2l.Pa2l">

    <TextView
        android:id="@+id/dhaTextViewStudentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="100dp"
        android:textStyle="bold"
        android:text="@string/student_id"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/dhaRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/dhaTextViewStudentId"
        android:layout_marginTop="100dp">
        <RadioButton
            android:id="@+id/dhaCelsiusRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:buttonTint="@color/purple_500"
            android:text="@string/celsius" />
        <RadioButton
            android:id="@+id/dhaFahrenheitRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_500"
            android:text="@string/fahrenheit" />
    </RadioGroup>

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/spinner_cities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="100dp"
        app:layout_constraintTop_toBottomOf="@id/dhaRadioGroup"
        android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>